force-app/main/default/objects/MX_Non_Compliant_Taxpayers__c/MX_Non_Compliant_Taxpayers__c.object-meta.xml
<CustomObject>
    <label>MX Non-Compliant Taxpayers</label>
    <nameField>
        <displayFormat>MX-{000000}</displayFormat>
        <label>MX Non-Compliant Taxpayers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MX Non-Compliant Taxpayers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>