force-app/main/default/objects/MX_Non_Compliant_Taxpayers__c/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <label>RFC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>