force-app/main/default/objects/MX_Non_Compliant_Taxpayers__c/fields/Taxpayer_Name__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_Name__c</fullName>
    <label>Taxpayer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>